# snakemake-executor-plugin-aws-batch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_mocked_api.yml  ci_true_api.yml  publish-image.yml  release-please.yml
docker/: Dockerfile
docs/: further.md  intro.md
examples/terraform/: README.md  main.tf  outputs.tf  variables.tf
snakemake_executor_plugin_aws_batch/: __init__.py  batch_client.py  batch_descriptor.py  batch_job_builder.py  constant.py  coordinator.py  coordinator_runner.py
terraform/: README.md  main.tf  vars.tf
tests/: __init__.py  docker-compose.yml  test_batch_job_builder.py  test_coordinator.py  test_coordinator_integration.py  test_coordinator_runner.py  test_preflight.py  tests.py  tests_mocked_api.py  tests_true_api.py
