[tool.poetry]
name = "snakemake-executor-plugin-aws-batch"
version = "0.1.0"
description = ""
authors = ["jakevc <jake.vancampen7@gmail.com>", "W. Lee Pang <wleepang>"]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-executor-plugin-aws-batch"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/aws-batch.html" 
keywords = ["snakemake", "plugin", "executor", "aws-batch"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.4"
snakemake-interface-executor-plugins = "^9.3.2"
boto3 = "^1.36.5"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
snakemake = "^8.20.1"
snakemake-storage-plugin-s3 = "^0.2.7"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
