[tool.poetry]
name = "snakemake-executor-plugin-aws-batch"
version = "0.2.1"
description = "Snakemake executor plugin for AWS Batch"
license = "MIT"
authors = ["jakevc <jake.vancampen7@gmail.com>", "W. Lee Pang <wleepang>"]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-executor-plugin-aws-batch"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/aws-batch.html" 
keywords = ["snakemake", "plugin", "executor", "aws-batch"]

[tool.poetry.dependencies]
boto3 = "^1.36.5"
python = "^3.11"
snakemake-interface-common = "^1.17.4"
snakemake-interface-executor-plugins = "^9.3.2"
snakemake-storage-plugin-s3 = ">=0.2,<0.4"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
coverage = "^7.3.2"
pytest = "^7.4.3"
# Support both snakemake 8 and 9. The executor talks to snakemake only through
# snakemake-interface-executor-plugins (pinned in the runtime deps above), whose
# contract is identical across 8 and 9, so no source changes are needed. CI's
# testing matrix constrains this per leg to exercise both majors.
snakemake = ">=8.30,<10"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
